# fastcoref

./: .gitignore  README.md  pyproject.toml  update_deps_auto.sh
.amazonq/rules/: coding-rules.md
fastcoref/: modeling.py  trainer.py
fastcoref/coref_models/: modeling_fcoref.py  modeling_lingmess.py
fastcoref/utilities/: collate.py  coref_dataset.py  util.py
tests/: test_fcoref.py  test_lingmess_coref.py
